src/app.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
	:root {
		--background: 220 8% 95%;
		--foreground: 0 0% 0%;

		--muted: 220 8% 85%;
		--muted-foreground: 0 0% 0%;

		--popover: 0 0% 100%;
		--popover-foreground: 0 0% 0%;

		--card: 0 0% 100%;
		--card-foreground: 0 0% 3.9%;

		--border: 0 0% 89.8%;
		--input: 0 0% 89.8%;

		--primary: 0 0% 0%;
		--primary-foreground: 0 0% 100%;

		--secondary: 220 8% 85%;
		--secondary-foreground: 0 0% 0%;

		--accent: 0 0% 96.1%;
		--accent-foreground: 0 0% 9%;
		--accent-text: 220 77% 59%;

		--destructive: 0 72.2% 50.6%;
		--destructive-foreground: 0 0% 98%;

		--unemphasized-1: 220 8 50;
		--unemphasized-2: 220 8 35;

		--ring: 0 0% 3.9%;

		--radius: 0.5rem;
	}

	.dark {
		--background: 220 4% 12%;
		--foreground: 0 0% 100%;

		--muted: 220 4% 20%;
		--muted-foreground: 0 0% 63.9%;

		--popover: 0 0% 9%;
		--popover-foreground: 0 0% 100%;

		--card: 220 4% 18%;
		--card-foreground: 220 8% 65%;

		--border: 0 0% 14.9%;
		--input: 0 0% 14.9%;

		--primary: 0 0% 98%;
		--primary-foreground: 0 0% 9%;

		--secondary: 220 4% 26%;
		--secondary-foreground: 0 0% 98%;

		--accent: 0 0% 14.9%;
		--accent-foreground: 0 0% 98%;
		--accent-text: 220 71% 77%;

		--destructive: 0 62.8% 30.6%;
		--destructive-foreground: 0 0% 98%;

		--unemphasized-1: 220 4 60;
		--unemphasized-2: 220 8 65;

		--ring: 0 0% 83.1%;
	}
}

@layer base {
	* {
		@apply border-border;
	}
	body {
		@apply bg-background text-foreground;
	}
}

